Add WANT_TO_PLAY collection status
Rename CollectionStatus values (OWN->OWNED, WANT->WANT_TO_OWN) and add a
new exclusive WANT_TO_PLAY value so a game's play-backlog is distinct from
wishlist-to-acquire and from owned. Add an idempotent CollectionStatusBackfill
CommandLineRunner to migrate existing rows, since ddl-auto=update stores the
enum as a string and won't rewrite legacy values.

Also fix pre-existing test-module compile errors: GamePlay tests passed flat
winner lists where the multiple-winners (draws) change made the field
List<List<...>>; restructured the fixtures and JSON-path assertions.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>